tests/fails/veclit.t
import "compiler.liszt"
local R = L.NewRelation { name="R", size=5 }

local liszt vk (v : R)
    var v = { }
end
R:map(vk)
